--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,9 @@ body {
 
     /* TODO: Change logic from toggle to hover */
 
-    .menu-header.dropdown::after {}
+    .menu-header.dropdown::after {
+        margin-left: 8px;
+    }
 
 
     /* TODO: menu HOVER dropdown functionality */
@@ -393,9 +395,6 @@ body {
         display: flex;
     }
 
-    .navbar * {
-        visibility: visible;
-    }
 
     .navbar .logo {
         position: static;
@@ -431,9 +430,20 @@ body {
     /* Styling of elements in the main menu */
     .menu.main-menu > :first-child, 
     .menu.main-menu > :where(ul, li) {
+        visibility: visible;
         flex-grow: 0;
         display: inline-block;
         margin: 0 38px 0 0;
+    }
+    
+    .menu.submenu {
+        visibility: hidden;
+    }
+
+    .hover:hover > .menu,
+    .hover:hover > .menu > .item {
+        visibility: visible;
+        display: block;
     }
 
     .menu.main-menu > .separator {
@@ -449,7 +459,30 @@ body {
         margin-right: 42px;
     }
 
+    /* Floating submenus */
+
+    .navbar .hover {
+        position: relative;
+    }
+
+    .navbar .hover .submenu {
+        position: absolute;
+        background-color: var(--clr-almost-white);
+        border-radius: 15px;
+        box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 10%);
+        padding: 24px
+        /* top: 0%;
+        left: 0%; */
+    }
+
+    .submenu > .item {
+        margin: 0;
+        white-space: nowrap;
+    }
+
     /* Intro styling */
+
+    /* TODO: figure out how to make it look better and why the damned image doesn't want to get smaller */
 
     .intro {
         flex-direction: row;
@@ -475,11 +508,10 @@ body {
     .intro .cta {
         order: 1;
         flex-shrink: 0;
-        max-width: 58vw;
+        max-width: 50vw;
         display: flex;
         flex-direction: column;
         padding-left: 10vw;
-        padding-right: 10vw;
         box-sizing: border-box;
     }
 
